// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacetedSelect.js should suggest options for keys 1`] = `
<StateManager
  closeMenuOnSelect={false}
  components={
    Object {
      "Input": [Function],
    }
  }
  defaultInputValue=""
  defaultMenuIsOpen={false}
  defaultValue={null}
  filterOption={[Function]}
  formatCreateLabel={[Function]}
  inputValue=""
  isClearable={false}
  isMulti={true}
  onChange={[Function]}
  onInputChange={[Function]}
  options={
    Array [
      Object {
        "getSuggestions": [Function],
        "label": "Capture Process Name",
        "value": "Capture Process Name",
      },
      Object {
        "getSuggestions": [Function],
        "label": "Flow",
        "value": "Flow",
      },
      Object {
        "getSuggestions": undefined,
        "label": "Capture Correlation ID",
        "value": "Capture Correlation ID",
      },
    ]
  }
  placeholder="Search..."
  value={Array []}
/>
`;

exports[`FacetedSelect.js should suggest values for selected key 1`] = `
<StateManager
  closeMenuOnSelect={false}
  components={
    Object {
      "Input": [Function],
    }
  }
  defaultInputValue=""
  defaultMenuIsOpen={false}
  defaultValue={null}
  filterOption={[Function]}
  formatCreateLabel={[Function]}
  inputValue="Capture Process Name:"
  isClearable={false}
  isMulti={true}
  onChange={[Function]}
  onInputChange={[Function]}
  options={
    Array [
      Object {
        "label": "GI-PI-Claims",
        "originalOption": Object {
          "getSuggestions": [Function],
          "label": "Capture Process Name",
          "type": "textoption",
        },
        "value": "GI-PI-Claims",
      },
      Object {
        "label": "Life-Claims-RetailClaims",
        "originalOption": Object {
          "getSuggestions": [Function],
          "label": "Capture Process Name",
          "type": "textoption",
        },
        "value": "Life-Claims-RetailClaims",
      },
    ]
  }
  placeholder="Search..."
  value={Array []}
/>
`;
